test/expected/explain_pmi-c.out
explain int C::*p
            ^
13: error: pointer-to-member is not supported in C
